[gd_scene load_steps=9 format=3 uid="uid://bjugxbm4m6oog"]

[ext_resource type="Script" uid="uid://7qy4vltxdtxr" path="res://shared/removable/debug/debug items.gd" id="1_t5ny7"]
[ext_resource type="Texture2D" uid="uid://3r085oyw0pm7" path="res://main/items/decor/type/chair/chair.png" id="3_7nd6f"]
[ext_resource type="ButtonGroup" uid="uid://dr73l8sgso3ht" path="res://shared/removable/debug/buttons/debug_amount.tres" id="4_74m0v"]
[ext_resource type="ButtonGroup" uid="uid://b23l783q8gcf5" path="res://shared/removable/debug/buttons/filters.tres" id="5_k5uiv"]
[ext_resource type="PackedScene" uid="uid://dfx5tynrdnhrc" path="res://shared/removable/debug/comparisons/comparison.tscn" id="6_j0a55"]
[ext_resource type="Script" uid="uid://b1yhtb61e4mpd" path="res://shared/removable/debug/comparisons/hover.gd" id="7_8arsc"]

[sub_resource type="TileSet" id="TileSet_43eqn"]
tile_size = Vector2i(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjgy2"]
atlas = ExtResource("3_7nd6f")
region = Rect2(0, 0, 288, 176)

[node name="debug items" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t5ny7")

[node name="tml" type="TileMapLayer" parent="."]
position = Vector2(-19, 0)
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_43eqn")

[node name="items" type="Sprite2D" parent="tml"]
texture = SubResource("AtlasTexture_vjgy2")
centered = false
offset = Vector2(10, 0)

[node name="error parent" type="Control" parent="tml/items"]
layout_mode = 3
anchors_preset = 0
offset_left = 9.5
offset_top = -0.5
offset_right = 49.5
offset_bottom = 39.5

[node name="search_page" type="Node2D" parent="tml"]
visible = false
position = Vector2(17.5, 6)

[node name="history" type="Node2D" parent="tml/search_page"]
position = Vector2(0.5, 194)

[node name="highlight" type="ColorRect" parent="."]
modulate = Color(0.756863, 1, 0.309804, 0.419608)
layout_mode = 0
offset_left = -19.0
offset_right = 13.0
offset_bottom = 32.0

[node name="custom" type="LineEdit" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 0
offset_left = -112.0
offset_top = 4.0
offset_right = -32.0
offset_bottom = 35.0
placeholder_text = "amount:"

[node name="search" type="LineEdit" parent="."]
custom_minimum_size = Vector2(240, 0)
layout_mode = 0
offset_left = -267.0
offset_top = 38.0
offset_right = -27.0
offset_bottom = 69.0
placeholder_text = "search: [id, name, desc, class]"
clear_button_enabled = true

[node name="compare" type="Button" parent="."]
layout_mode = 0
offset_left = -350.0
offset_top = 3.0
offset_right = -273.0
offset_bottom = 34.0
toggle_mode = true
text = "compare"

[node name="buttons" type="Control" parent="."]
anchors_preset = 0
offset_left = -254.0
offset_right = -214.0
offset_bottom = 40.0

[node name="1" type="Button" parent="buttons"]
layout_mode = 0
offset_left = -5.0
offset_top = 2.0
offset_right = 13.0
offset_bottom = 33.0
toggle_mode = true
button_pressed = true
button_group = ExtResource("4_74m0v")
text = "1"

[node name="99" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 23.0
offset_top = 3.0
offset_right = 50.0
offset_bottom = 34.0
toggle_mode = true
button_group = ExtResource("4_74m0v")
text = "99"

[node name="stack" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 57.0
offset_top = 3.0
offset_right = 107.0
offset_bottom = 34.0
toggle_mode = true
button_group = ExtResource("4_74m0v")
text = "Stack"

[node name="x" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 116.0
offset_top = 4.0
offset_right = 134.0
offset_bottom = 35.0
toggle_mode = true
button_group = ExtResource("4_74m0v")
text = "X"

[node name="page" type="Control" parent="."]
anchors_preset = 0
offset_left = -128.0
offset_top = 89.0
offset_right = -88.0
offset_bottom = 129.0

[node name="-1" type="Button" parent="page"]
layout_mode = 0
offset_right = 22.0
offset_bottom = 31.0
text = "←"

[node name="0" type="Button" parent="page"]
layout_mode = 0
offset_left = 27.0
offset_top = 1.0
offset_right = 67.0
offset_bottom = 32.0
text = "0 / X"

[node name="1" type="Button" parent="page"]
layout_mode = 0
offset_left = 71.0
offset_top = 1.0
offset_right = 93.0
offset_bottom = 32.0
text = "→"

[node name="filters" type="Control" parent="."]
anchors_preset = 0
offset_left = -19.0
offset_right = 21.0
offset_bottom = 40.0

[node name="all" type="Button" parent="filters"]
layout_mode = 0
offset_left = -248.0
offset_top = 137.0
offset_right = -240.0
offset_bottom = 145.0
toggle_mode = true
button_pressed = true
button_group = ExtResource("5_k5uiv")
text = "all"

[node name="id" type="Button" parent="filters"]
layout_mode = 0
offset_left = -212.0
offset_top = 138.0
offset_right = -189.0
offset_bottom = 169.0
toggle_mode = true
button_group = ExtResource("5_k5uiv")
text = "id"

[node name="name" type="Button" parent="filters"]
layout_mode = 0
offset_left = -174.0
offset_top = 139.0
offset_right = -122.0
offset_bottom = 170.0
toggle_mode = true
button_group = ExtResource("5_k5uiv")
text = "name"

[node name="description" type="Button" parent="filters"]
layout_mode = 0
offset_left = -112.0
offset_top = 135.0
offset_right = -17.0
offset_bottom = 166.0
toggle_mode = true
button_group = ExtResource("5_k5uiv")
text = "description"

[node name="type" type="Button" parent="filters"]
layout_mode = 0
offset_left = -245.0
offset_top = 175.0
offset_right = -202.0
offset_bottom = 206.0
toggle_mode = true
button_group = ExtResource("5_k5uiv")
text = "type"

[node name="class" type="Button" parent="filters"]
layout_mode = 0
offset_left = -189.0
offset_top = 177.0
offset_right = -143.0
offset_bottom = 208.0
toggle_mode = true
button_group = ExtResource("5_k5uiv")
text = "class"

[node name="searches" type="Control" parent="."]
anchors_preset = 0
offset_left = -265.0
offset_top = 253.0
offset_right = -225.0
offset_bottom = 293.0

[node name="clear" type="Control" parent="."]
anchors_preset = 0
offset_left = -217.0
offset_top = 339.0
offset_right = -177.0
offset_bottom = 379.0

[node name="clear history" type="Button" parent="clear"]
layout_mode = 0
offset_left = 92.0
offset_top = 47.0
offset_right = 196.0
offset_bottom = 78.0
text = "clear history"

[node name="clear searches" type="Button" parent="clear"]
layout_mode = 0
offset_left = -54.0
offset_top = -125.0
offset_right = 65.0
offset_bottom = -94.0
text = "clear searches"

[node name="clear comparisons" type="Button" parent="clear"]
layout_mode = 0
offset_left = 60.0
offset_top = 81.0
offset_right = 210.0
offset_bottom = 112.0
text = "clear comparisons"

[node name="hover info" parent="." instance=ExtResource("6_j0a55")]
layout_mode = 1
offset_left = 491.0
offset_top = 162.0
offset_right = 491.0
offset_bottom = 162.0
script = ExtResource("7_8arsc")

[node name="comparisons" type="Control" parent="."]
anchors_preset = 0
offset_left = -119.0
offset_top = 656.0
offset_right = -79.0
offset_bottom = 696.0

[node name="comparison" parent="comparisons" instance=ExtResource("6_j0a55")]
layout_mode = 1
offset_left = -126.0
offset_top = -33.0
offset_right = -126.0
offset_bottom = -33.0

[node name="comparison2" parent="comparisons" instance=ExtResource("6_j0a55")]
layout_mode = 1
offset_left = 78.0
offset_top = -33.0
offset_right = 78.0
offset_bottom = -33.0

[node name="comparison3" parent="comparisons" instance=ExtResource("6_j0a55")]
layout_mode = 1
offset_left = 265.0
offset_top = -30.0
offset_right = 265.0
offset_bottom = -30.0

[node name="comparison4" parent="comparisons" instance=ExtResource("6_j0a55")]
layout_mode = 1
offset_left = 438.0
offset_top = -32.0
offset_right = 438.0
offset_bottom = -32.0

[connection signal="text_changed" from="custom" to="." method="_on_custom_text_changed"]
[connection signal="text_changed" from="search" to="." method="_on_search_text_changed"]
[connection signal="text_submitted" from="search" to="." method="_on_search_text_submitted"]
[connection signal="toggled" from="compare" to="." method="_on_compare_toggled"]
[connection signal="pressed" from="clear/clear history" to="." method="_on_clear_history_pressed"]
[connection signal="pressed" from="clear/clear searches" to="." method="_on_clear_searches_pressed"]
[connection signal="pressed" from="clear/clear comparisons" to="." method="_on_clear_comparisons_pressed"]
